RESOLVED FIXED117101
WebKit ignores aria-hidden when traversing nodes for name calculation
https://bugs.webkit.org/show_bug.cgi?id=117101
Summary WebKit ignores aria-hidden when traversing nodes for name calculation
James Craig
Reported 2013-05-31 18:14:54 PDT
Created attachment 203477 [details] test case demonstrating bug WebKit ignores aria-hidden when traversing nodes for name calculation. Load attached test case. Notice the number of reviews (1,234) is spoken twice.
Attachments
test case demonstrating bug (484 bytes, text/plain)
2013-05-31 18:14 PDT, James Craig
no flags
patch (4.03 KB, patch)
2013-06-01 13:30 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2013-05-31 18:15:20 PDT
James Craig
Comment 2 2013-05-31 18:15:30 PDT
Related to bug 117100
chris fleizach
Comment 3 2013-06-01 13:30:16 PDT
WebKit Commit Bot
Comment 4 2013-06-01 21:42:49 PDT
Comment on attachment 203494 [details] patch Clearing flags on attachment: 203494 Committed r151079: <http://trac.webkit.org/changeset/151079>
WebKit Commit Bot
Comment 5 2013-06-01 21:42:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.