WebKit ignores aria-hidden when traversing nodes for name calculation https://bugs.webkit.org/show_bug.cgi?id=117101

Reviewed by Tim Horton.

Source/WebCore:

When calculating the inner text, aria-hidden should be considered.

Test: accessibility/text-role-with-aria-hidden-inside.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::shouldUseAccessiblityObjectInnerText):

LayoutTests:

* accessibility/text-role-with-aria-hidden-inside-expected.txt: Added.
* accessibility/text-role-with-aria-hidden-inside.html: Added.


Canonical link: https://commits.webkit.org/135380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151079 268f45cc-cd09-0410-ab3c-d52691b4dbfc